Revision history for Perl extension ACME::KeyboardMarathon.

1.07  2012/04/09

	Initial module creation.

VERSIONTAG  DATETAG

	Corrected a quoting mistake.	
	Now warning, instead of exiting on bad chars.
	Using Carp.
	Removed an unused var.
	Corrected spelling mistakes in the POD.
	Added RCS data.
	Added warnings.
	And several other cleanups from Perl::Critic